// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders secondary button 1`] = `
.c1 {
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 4px;
  border: 1px solid #1785FB;
  box-shadow: none;
  color: #1785FB;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font: 500 12px/20px 'Roboto';
  margin: 0;
  padding: 6px 12px;
  -webkit-transition: background 0.2s ease;
  transition: background 0.2s ease;
  border-radius: 0;
}

.c1:not(:last-child) {
  border-right: none;
}

.c1:first-child {
  border-radius: 4px 0 0 4px;
}

.c1:last-child {
  border-radius: 0 4px 4px 0;
}

.c1:hover {
  background: #e0eefe;
}

.c1:focus {
  background: #e0eefe;
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
  opacity: 0.24;
}

.c1:disabled:hover,
.c1:disabled:focus {
  background: transparent;
  color: #1785FB;
}

.c1 svg {
  fill: currentColor;
}

.c0 {
  border-radius: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 16px;
  vertical-align: middle;
  width: 16px;
  fill: #1785FB;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    <svg
      className="c2"
      size={16}
      viewBox="0 0 16 16"
    >
      <path
        d="M8,8 L8,1 L9,1 L9,8 L16,8 L16,9 L9,9 L9,16 L8,16 L8,9 L1,9 L1,8 L8,8 Z"
      />
    </svg>
  </button>
  <button
    className="c1"
  >
    Mundo
  </button>
  <button
    className="c1"
  >
    Happy
  </button>
</div>
`;

exports[`render renders without crashing 1`] = `
.c1 {
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #1785FB;
  border-radius: 4px;
  border: 0;
  box-shadow: none;
  color: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font: 500 12px/20px 'Roboto';
  margin: 0;
  padding: 6px 12px;
  -webkit-transition: background 0.2s ease;
  transition: background 0.2s ease;
  border-radius: 0;
}

.c1:not(:last-child) {
  border-right: none;
}

.c1:first-child {
  border-radius: 4px 0 0 4px;
}

.c1:last-child {
  border-radius: 0 4px 4px 0;
}

.c1:hover {
  background: #035dbd;
}

.c1:focus {
  background: #034995;
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
  opacity: 0.24;
}

.c1:disabled:hover,
.c1:disabled:focus {
  background: #1785FB;
  color: #fff;
}

.c1 svg {
  fill: currentColor;
}

.c0 {
  border-radius: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 16px;
  vertical-align: middle;
  width: 16px;
  fill: #1785FB;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    <svg
      className="c2"
      size={16}
      viewBox="0 0 16 16"
    >
      <path
        d="M8,8 L8,1 L9,1 L9,8 L16,8 L16,9 L9,9 L9,16 L8,16 L8,9 L1,9 L1,8 L8,8 Z"
      />
    </svg>
  </button>
  <button
    className="c1"
  >
    Mundo
  </button>
  <button
    className="c1"
  >
    Happy
  </button>
</div>
`;
